# open_nipals

./: CONTRIBUTING.md  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: draft-pdf.yml  publish-to-test-pypi.yml  python-app.yml
data/: PCANanData.xlsx  PCATestData.xlsx  SIMCAScaledFullDatLoadings.xlsx  SIMCAScaledNaNDatScoresT2RangeDMODXAbs.xlsx  SIMCA_ScaledFullDat_Scores_T2Range_DMODXAbs.xlsx  SIMCA_ScaledNaNDat_Loadings.xlsx  randomGen_PLSTResults.xlsx  randomGen_SIMCAResults.xlsx
docs/: conf.py  contributing.rst  index.rst  open_nipals.rst  readme.rst  requirements.txt
docs/_build/doctrees/: authors.doctree  changelog.doctree  contributing.doctree  environment.pickle  index.doctree  license.doctree  modules.doctree  open_nipals.doctree  readme.doctree
docs/_build/doctrees/api/: modules.doctree  scan_dimreduction.doctree
docs/_build/doctrees/source/: modules.doctree  open_nipals.doctree
docs/_build/html/: .buildinfo  .buildinfo.bak  authors.html  changelog.html  contributing.html  genindex.html  index.html  license.html  modules.html  objects.inv  open_nipals.html  py-modindex.html  readme.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/scan_dimreduction/: nipalsPCA.html  utils.html
docs/_build/html/_sources/: authors.rst.txt  index.rst.txt  license.rst.txt
docs/_build/html/_sources/api/: modules.rst.txt  scan_dimreduction.rst.txt
docs/_build/html/api/: modules.html  scan_dimreduction.html
paper/: paper.bib  paper.md
paper/notebooks/: explained_variance_comparison.ipynb  imd_oomd_plot.ipynb  numerical_complexity.ipynb  pca_benchmark_results.csv  regression_vector_visualization.ipynb
paper/plots/: HT2_DModX_plot.py  requirements.txt
src/open_nipals/: nipalsPCA.py  nipalsPLS.py  utils.py
tests/: test_arrangeData.py  test_nipalsPCA.py  test_nipalsPLS_RandomGen.py
