# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = open_nipals
description = A package to support dimensionality reduction methods.
author = 'Niels Schlusser'
author_email = nschluss@its.jnj.com
license = BSD 3-Clause License
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/johnsonandjohnson/open_nipals/pull/13
# Add here related links, for example:
project_urls =
    Documentation = https://about.readthedocs.com/

# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any

# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python


[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src

# Require a min/specific Python version (comma-separated conditions)
python_requires = >=3.9,<3.15

# Add here dependencies of your project (line-separated), e.g. requests>=2.2,<3.0.
# Version specifiers like >=2.2,<3.0 avoid problems due to API changes in
# new major versions. This works if the required packages follow Semantic Versioning.
# For more information, check out https://semver.org/.
install_requires =
    numpy >=1.21, <2.4
    pandas >=2.0, <2.4
    scipy >=1.5, <1.17
    scikit-learn >=1.2, <1.8

[options.packages.find]
where = src
exclude =
    tests
    .tox
    docs
    dist
    data
    build

[options.extras_require]
# Add here test requirements (semicolon/line-separated)
testing =
    setuptools
    pytest
    pytest-cov
    parameterized
    openpyxl
    ruff
    tox
    tox-conda

[tool:pytest]
addopts =
    # --cov open_nipals --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no-vcs = 1
formats = bdist_wheel

[tool.ruff.lint]
select = ["ALL"]

[tool.ruff]
line-length=79

[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 4.0
package = open_nipals
extensions =
    no_skeleton
